--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="colum-2">
         <h1>About Us</h1>
         <p>
-            Hey! I'm Roy the Teck, Senior Software Developer with 5years exprience in the fied. This site is a demo
-            website"
+            Hey! I'm Roy the Teck, Senior Software Developer with 5years experience in the field. This site is a demo
+            website
             <a href="https://www.digitalocean.com/community/turial_series/how-to-build-a-website-with-css">How To Build
-                a website With CSS</a>,"which will walkk through
+                a website With CSS</a>,"which will walk through
         </p>
 
     </div>
@@ -59,13 +59,13 @@
     <div class="colum-4 project-8"></div>
 
     <div class="section-break">
-        <h2 class="section-heading">Exprience</h2>
+        <h2 class="section-heading">Experience</h2>
 
         <div class="colum-1">
             <h2>Employment</h2>
             <table class="table-style">
                 <tr>
-                    <td>Freelance dedsigner</td>
+                    <td>Freelance designer</td>
                     <td>Seven Seas</td>
                     <td>2015-present</td>
                 </tr>
@@ -84,7 +84,7 @@
 
                 <tr>
                     <td>Open Web Advocate</td>
-                    <td>Kiddie Pool Kuberneters</td>
+                    <td>Kiddie Pool Kubernetes</td>
                     <td>2017-2018</td>
                 </tr>
                 <tr>
@@ -120,7 +120,7 @@
                     <td>2016-2017</td>
                 </tr>
                 <tr>
-                    <td>Phytoplankton Presschool</td>
+                    <td>Phytoplankton Preschool</td>
                     <td>2015-2016</td>
                 </tr>
             </table>
