--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h5><i>BRIGHT YOUR DIGITAL</i></h5>
     </div>
 
-    <div class="colum-2">
+    <div class="column-2">
         <h1>About Us</h1>
         <p>
             Hey! I'm Roy the Teck, Senior Software Developer with 5years experience in the field. This site is a demo
@@ -26,42 +26,42 @@
 
     </div>
 
-    <div class="colum-2 large-profile"></div>
+    <div class="column-2 large-profile"></div>
 
     <h2 class="section-heading">Project</h2>
 
-    <div class="colum-4 project-1"></div>
+    <div class="column-4 project-1"></div>
 
-    <div class="colum-4 project-2">
+    <div class="column-4 project-2">
         <h2 class="project-text">WEB <br>DESIGN</h2>
     </div>
 
-    <div class="colum-4 project-3">
+    <div class="column-4 project-3">
         <h2 class="project-text">CHAT <br>BOTS</h2>
     </div>
 
-    <div class="colum-4 project-4">
+    <div class="column-4 project-4">
         <h2 class="project-text">GAME <br>DESIGN</h2>
     </div>
 
-    <div class="colum-4 project-5">
+    <div class="column-4 project-5">
         <h2 class="project-text">TEXT <br>ANALYSIS</h2>
     </div>
 
-    <div class="colum-4 project-6">
+    <div class="column-4 project-6">
         <h2 class="project-text">JAVA <br>SCRIPT</h2>
     </div>
 
-    <div class="colum-4 project-7">
+    <div class="column-4 project-7">
         <h2 class="project-text">DATA <br>PRIVACY</h2>
     </div>
 
-    <div class="colum-4 project-8"></div>
+    <div class="column-4 project-8"></div>
 
     <div class="section-break">
         <h2 class="section-heading">Experience</h2>
 
-        <div class="colum-1">
+        <div class="column-1">
             <h2>Employment</h2>
             <table class="table-style">
                 <tr>
@@ -96,7 +96,7 @@
             </table>
         </div>
 
-        <div class="colum-2a">
+        <div class="column-2a">
             <h2>Education</h2>
             <table class="table-style">
                 <tr>
@@ -126,7 +126,7 @@
             </table>
         </div>
     </div>
-    <div class="colum-2a">
+    <div class="column-2a">
         <h2>Skills</h2>
         <table class="table-style">
             <tr>
@@ -157,7 +157,7 @@
     </div>
 
     <div class="section-break"></div>
-    <div class="colum-quote">
+    <div class="column-quote">
         <p class="quote">"Our first priority is satisfaction of Clients with brighten your project with outstanding
             result"</p>
     </div>
